--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,4 @@
-[submodule "osal"]
-	path = osal
-	url = ../osal.git
 [submodule "3rd-party/lwmem"]
-	path = 3rd-party/lwmem
-	url = ../lwmem.git
+	url = https://github.com/thuan1091996/lwmem.git
+[submodule "osal"]
+	url = https://github.com/thuan1091996/osal.git
